PyMaker/datas/object2/RawHTML/i9601/Python_DOC_referPages.what-does-if-if-else-one-line-do-in-python.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/394809/does-python-have-a-ternary-conditional-operator">Does Python have a ternary conditional operator?</a>
<span class="question-originals-answer-count">
                    28 answers
                </span>
</li>
</ul>
</div>
<p>I ran into this expression in a question here about <a href="https://stackoverflow.com/a/3421173/343215">knapsack problems</a>:</p>
<pre><code>def f(v, i, S):
  if i &gt;= len(v): return 1 if S == 0 else 0
  count = f(v, i + 1, S)
  count += f(v, i + 1, S - v[i])
  return count
</code></pre>
<p><strike>When I try to write out line two <code>if i &gt;= len(v): return 1 if S == 0 else 0</code> in a more general form I get an error:</strike></p>
<pre><code>In [3]: if test1 : print x if test2 else print y 
  File "&lt;ipython-input-3-9d4131fa0c48&gt;", line 1
    if test1 : print x if test2 else print y
                     ^
SyntaxError: Missing parentheses in call to 'print'
</code></pre>
<p></p></div>
<div class="post-text" itemprop="text">
<p>I feel it is important to point out that what you describe (<code>if-if-else</code>) is <em>not</em> a conditional expression per se, but it does include one: </p>
<p><code>1 if S == 0 else 0</code> <em>is</em> a conditional expression</p>
<p><code>if i &gt;= len(v): return 1 if S == 0 else 0</code> is a <a href="https://docs.python.org/2/reference/compound_stmts.html" rel="nofollow noreferrer">compound statement</a> which comprises a simple <code>if</code> statement with a conditional expression.</p>
<p>So, if the first <code>if</code> evaluates to <code>True</code>, then the conditional expression will be  evaluated and the appropriate element (in this case <code>1</code> or <code>0</code>) returned to the preceding statement (<code>return</code>, here).</p>
</div>
<div class="post-text" itemprop="text">
<p>You have found the <a href="https://stackoverflow.com/questions/394809/does-python-have-a-ternary-conditional-operator">ternary operator</a>, which is known as a <a href="https://www.python.org/dev/peps/pep-0308/" rel="nofollow noreferrer">Conditional Expression</a> in Python. The expression <code>x if condition else y</code> means that if the condition (which can be a complex statement or function) evaluates to True, the expression returns <code>x</code>, and if the condition evaluates to False, the expression returns <code>y</code>.</p>
<p>It works like the following if-statement:</p>
<pre><code>if test1:
    if test2:
        print(x)
    else:
        print(y)
</code></pre>
<p>Your error stems from not wrapping the <a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow noreferrer">print function</a> arguments in a parentheses. This is a change made to Python 3, whereas in Python 2, your syntax would have been fine. Rewrite it to look like:</p>
<p><code>if test1: print(x if test2 else y)</code></p>
<p>and your error will go away.</p>
</div>
<div class="post-text" itemprop="text">
<p>It is an if-expression: <code>a if condition else b</code> means: if <em>condition</em> is true, then the expression has value <em>a</em>, otherwise <em>b</em></p>
<p>Your problem is unrelated, Seems you are using python 3, you got the example from python 2. In python 3 print is a function, so just add parentheses </p>
</div>
<div class="post-text" itemprop="text">
<p>if you are using python of version &gt;3, then print should have parenthesis i.e ()</p>
</div>
<span class="comment-copy">It's called a conditional expression or ternary expression, see <a href="http://stackoverflow.com/questions/394809/does-python-have-a-ternary-conditional-operator" title="does python have a ternary conditional operator">stackoverflow.com/questions/394809/…</a> and <a href="https://docs.python.org/2/reference/expressions.html#conditional-expressions" rel="nofollow noreferrer">docs.python.org/2/reference/…</a> .</span>
<span class="comment-copy">Note your immediate problem is that <code>print()</code> is a function in Python 3, and calling it requires parentheses.</span>
<span class="comment-copy">you need to fix the parentheses for print when running your script with Python 3.</span>
<span class="comment-copy">I rolled back the question to your original post because your edits render the accepted and upvoted answer (You are missing <code>()</code> in your print statement) meaningless.</span>
<span class="comment-copy">@SiHa, Yes. I've made the necessary continuity correction. Correct answer is for the example. I know what a conditional expression is. What I wanted was a name for the single line as in: "so what do i call it besides if-if-else?" LOL.</span>
<span class="comment-copy">I think you captured what I was after. As far as I'm concerned, it's not a duplicate, but a misunderstanding (on my part) that this is better understood as compound (conditional) statement.</span>
